Transpiler: weitere Methode und sonar issues behoben